fix page scrolling on collapse and expand

--- a/src/page-scroller/page-scroller.css
+++ b/src/page-scroller/page-scroller.css
@@ -13,8 +13,7 @@
   overflow-x: auto;
 }
 
-.page-scroller .page,
-.page-scroller .collapsed-page,
+.page-scroller .page-controller,
 .page-scroller .blank-page {
   flex: none;
   position: sticky;
